[package]
name           = "sansan"
version        = "0.0.0"
edition        = "2021"
authors        = ["hinto-janai <hinto.janai@protonmail.com>"]
homepage       = "https://sansan.cat"
documentation  = "https://docs.rs/sansan"
repository     = "https://github.com/hinto-janai/sansan"
keywords       = ["music", "real-time", "audio", "engine", "lock-free"]
categories     = ["multimedia"]
readme         = "README.md"
license        = "MIT"
description    = "Real-time music engine"

# Arc::into_inner()
rust-version   = "1.70.0"

# Exclude files when uploading to crate.io
exclude = [
	".github",
	"assets",
	"book",
	"examples",
	"DESIGN.md",
	"deny.toml",
]

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto           = true
strip         = "none"
codegen-units = 1
opt-level     = 3

[profile.dev]
lto       = false
strip     = "none"
opt-level = 1

[features]
default = ["serde", "cubeb"]

[dev-dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"]  }
serde   = { version = "1.0.192", features = ["derive", "rc"] }
log     = { version = "0.4.20", features = ["serde"] }

[dependencies]
### Personal libraries.
someday  = { version = "0.0.4" }
lpt      = { version = "1.0.0" }

## Optional libraries.
bincode      = { version = "2.0.0-rc.3", features = ["derive"], optional = true }
serde        = { version = "1.0.192", features = ["derive", "rc"], optional = true }
log          = { version = "0.4.20", features = ["serde"], optional = true }

### Regular libraries.
arrayvec     = { version = "0.7.4" }
crossbeam    = { version = "0.8.2", features = ["crossbeam-channel"] }
#once_cell    = { version = "1.18.0" }
rand         = { version = "0.8.5", features = ["small_rng"] }
thiserror    = { version = "1.0.50" }
seq-macro    = { version = "0.3.5" }
strum        = { version = "0.25.0", features = ["derive", "phf"] }
paste        = { version = "1.0.14" }

### Audio libraries.
audio_thread_priority = { version = "0.30.0" }
souvlaki              = { version = "0.6.1" }
symphonia             = { version = "0.5.3", features = ["all"] }
rubato                = { version = "0.14.1" }
rb                    = { version = "0.4.1" }

### Optional Audio libraries.
cubeb = { version = "0.10.3", optional = true }
# TODO: eventually as another backend
#cpal  = { version = "0.15.2", optional = true }

## Windows.
[target.'cfg(windows)'.dependencies]
# Needed for souvlaki.
windows = { version = "0.51", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_LibraryLoader",
]}
