[package]
name           = "sansan"
version        = "0.0.0"
edition        = "2021"
authors        = ["hinto-janai <hinto.janai@protonmail.com>"]
homepage       = "https://sansan.cat"
documentation  = "https://docs.rs/sansan"
repository     = "https://github.com/hinto-janai/sansan"
keywords       = ["music", "real-time", "audio", "engine", "lock-free"]
categories     = ["multimedia::audio"]
readme         = "README.md"
license        = "MIT"
license-file   = "LICENSE"
description    = "Real-time music engine"

# Arc::into_inner()
rust-version = "1.70.0"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-exclude-and-include-fields
include = ["/src"]

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto           = true
strip         = "none"
codegen-units = 1
opt-level     = 3

[profile.dev]
lto       = false
strip     = "none"
opt-level = 1

[features]
# TODO: Change default to cubeb after testing.
# default = ["serde", "cubeb"]
default = ["serde", "cpal", "rayon"]
dummy   = []

[dev-dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"]  }
serde   = { version = "1.0.193", features = ["derive", "rc"] }
log     = { version = "0.4.20", features = ["serde"] }
pretty_assertions = { version = "1.4.0" }

[dependencies]
### Personal libraries.
someday  = { git = "https://github.com/hinto-janai/someday" } # TODO: set version on release
lpt      = { version = "1.0.0" }

## Optional libraries.
bincode      = { version = "2.0.0-rc.3", features = ["derive"], optional = true }
serde        = { version = "1.0.193", features = ["derive", "rc"], optional = true }
log          = { version = "0.4.20", features = ["serde"], optional = true }

### Regular libraries.
arrayvec     = { version = "0.7.4" }
cfg-if       = { version = "1.0.0" }
crossbeam    = { version = "0.8.3", features = ["crossbeam-channel"] }
rand         = { version = "0.8.5" }
rayon        = { version = "1.8.1", optional = true }
thiserror    = { version = "1.0.52" }
seq-macro    = { version = "0.3.5" }
strum        = { version = "0.25.0", features = ["derive", "phf"] }
paste        = { version = "1.0.14" }

### Audio libraries.
audio_thread_priority = { version = "0.30.0" }
souvlaki              = { version = "0.6.1" }
symphonia             = { version = "0.5.3", features = ["all"] }
rubato                = { version = "0.14.1" }

### Optional Audio libraries.
cubeb = { version = "0.10.7", optional = true }
cpal  = { version = "0.15.2", optional = true }

## Windows.
[target.'cfg(windows)'.dependencies]
# Needed for souvlaki.
windows = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_LibraryLoader",
]}
